--- a/render.yaml
+++ b/render.yaml
@@ -26,7 +26,7 @@ services:
       - key: GOOGLE_REDIRECT_URI
         sync: false
     healthCheckPath: /api/actuator/health
-    env: 
+    envVars: 
       - key: SPRING_PROFILES_ACTIVE
         value: prod
 
