Fix render.yaml: use databases section for PostgreSQL configuration

--- a/render.yaml
+++ b/render.yaml
@@ -29,8 +29,8 @@ services:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
 
-  - type: postgresql
-    name: finance-monkey-db
-    plan: free
+databases:
+  - name: finance-monkey-db
     databaseName: finance_monkey
     user: postgres
+    plan: free
