--- a/render.yaml
+++ b/render.yaml
@@ -8,14 +8,20 @@ services:
     healthCheckPath: /api/actuator/health
     envVars:
       - key: DB_URL
-        fromDatabase: finance-monkey-db
-        property: connectionString
+        fromService:
+          type: database
+          name: finance-monkey-db
+          property: connectionString
       - key: DB_USERNAME
-        fromDatabase: finance-monkey-db
-        property: user
+        fromService:
+          type: database
+          name: finance-monkey-db
+          property: user
       - key: DB_PASSWORD
-        fromDatabase: finance-monkey-db
-        property: password
+        fromService:
+          type: database
+          name: finance-monkey-db
+          property: password
       - key: JWT_SECRET
         sync: false
       - key: GEMINI_API_KEY
