Fix dependency issues and simplify Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,7 @@
 FROM gradle:8.4-jdk17 AS build
 WORKDIR /app
-# Copy just the build files first for better caching
-COPY build.gradle settings.gradle ./
-COPY gradle ./gradle
-# Pre-download dependencies
-RUN gradle dependencies --no-daemon
-
-# Now copy the source code
-COPY src ./src
+# Copy the entire project
+COPY . .
 # Build the application
 RUN gradle bootJar --no-daemon
 
