--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     autoDeploy: true
     dockerfilePath: ./Dockerfile
-    buildDirectory: backend
+    rootDir: backend
     healthCheckPath: /api/actuator/health
     envVars:
       - key: DB_URL
