Fix database configuration for Render deployment

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -1,5 +1,6 @@
 spring:
   datasource:
+    # Using Render's DATABASE_URL environment variable directly
     url: ${DATABASE_URL}
     driver-class-name: org.postgresql.Driver
   jpa:
