--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	// PostgreSQL
 	implementation 'org.postgresql:postgresql'
 	
+	// JDBC URL Parser for DATABASE_URL environment variable
+	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
+	
 	// Flyway for database migrations
 	implementation 'org.flywaydb:flyway-core'
 	
