Add dedicated retry configuration for database connections with specific handling for DNS resolution issues

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -6,11 +6,28 @@ spring:
       connection-timeout: 20000
       maximum-pool-size: 5
       minimum-idle: 2
+      # Don't fail initialization forever
       initialization-fail-timeout: -1
+      # Add a large connection timeout for DNS resolution issues
+      connection-timeout: 30000
+      # Continue trying to acquire connection
+      keepalive-time: 60000
+      # Only validate once every 10 seconds to reduce load
+      validation-timeout: 10000
+      # Retry connection validation 
+      max-lifetime: 180000
+    
     # Enable connection retry for database connectivity issues
     tomcat:
       max-wait: 20000
       test-on-borrow: true
+      
+  # Configuration for managing DNS resolution issues in cloud environments
+  cloud:
+    # Render-specific settings
+    render:
+      # Allow more time for DNS resolution
+      connection-timeout: 30000
   
   # Make application more tolerant to failures
   jpa:
