--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -1,20 +1,12 @@
 spring:
-  # Disable database auto-configuration to allow application to start even when database is unavailable
-  autoconfigure:
-    exclude:
-      - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-      - org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
-      - org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
-  
-  # Application-specific settings
   application:
     name: finance-monkey
   
-  # Connection settings for resiliency
+  # Database connection settings
   datasource:
     # These settings help with connection issues in cloud environments
     hikari:
-      # Connection timeout for DNS resolution issues - increased to 60 seconds
+      # Connection timeout for DNS resolution issues
       connection-timeout: 60000
       maximum-pool-size: 5
       minimum-idle: 1
@@ -24,16 +16,10 @@ spring:
       keepalive-time: 120000
       # Only validate once every 10 seconds to reduce load
       validation-timeout: 10000
-      # Retry connection validation 
-      max-lifetime: 300000
-      # Idle timeout
-      idle-timeout: 300000
       # Connection test query
       connection-test-query: SELECT 1
-      # Register MBeans for monitoring
-      register-mbeans: true
     
-    # Configure connection url and driver
+    # Use the DATABASE_URL environment variable from Render
     url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/financemonkey}
     driver-class-name: org.postgresql.Driver
     
