--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -54,10 +54,14 @@ spring:
     
   # Flyway migration configuration - will be enabled after successful database connection
   flyway:
-    # Disable automatic migration at startup
+    # Disable automatic migration at startup - we'll handle this manually
     enabled: false
     baseline-on-migrate: true
     locations: classpath:db/migration
+    # Make Flyway more resilient
+    fail-on-missing-locations: false
+    out-of-order: true
+    validate-on-migrate: false
     
 # Application-specific configuration
 app:
