--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 	implementation 'com.google.api-client:google-api-client:2.2.0'
 	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
 	implementation 'com.google.apis:google-api-services-gmail:v1-rev20220404-2.0.0'
+	implementation 'com.google.apis:google-api-services-drive:v3-rev20230212-2.0.0'
 	
 	// Google Generative AI (Gemini)
 	implementation 'com.google.cloud:google-cloud-aiplatform:3.20.0'
